# RecogAssistant

./: .gitignore  LICENSE  README.en.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt  service.bat  service.sh
config/: settings-local.yaml  settings.yaml
data/db/scripts/: init_recognition_db.sql  insert_recognition_db.sql
data/db/upgrades/: README.md
scripts/: check_vcredist.ps1  service_spawn.ps1
src/recognizer/: __init__.py  __main__.py  main.py
src/recognizer/application/: __init__.py  errors.py
src/recognizer/application/dtos/: __init__.py
src/recognizer/application/services/: __init__.py  export_config_service.py  export_service.py  llm_config_service.py  node_config_service.py  recognition_history.py  recognition_service.py  ruleset_config_service.py  template.py  template_config_service.py  validator_config_service.py  workflow_config_service.py  workflow_orchestrator_factory.py
src/recognizer/application/workflows/: __init__.py  recognition_orchestrator.py
src/recognizer/common/: __init__.py
src/recognizer/common/config/: __init__.py  settings.py
src/recognizer/common/logging/: __init__.py  log_filter.py  request_context.py  setup.py
src/recognizer/common/middleware/: __init__.py  middleware.py
src/recognizer/common/utils/: __init__.py  file.py
src/recognizer/domain/: __init__.py
src/recognizer/domain/extraction/: __init__.py  engine.py  script_runner.py  template_manager.py
src/recognizer/domain/recognition/: __init__.py
src/recognizer/domain/shared/: __init__.py
src/recognizer/domain/template/: __init__.py  database.py  migrate_json_templates.py  template_engine.py  template_store.py
src/recognizer/domain/validation/: __init__.py  engine.py
src/recognizer/infrastructure/: __init__.py
src/recognizer/infrastructure/export/: __init__.py  exporters.py
src/recognizer/infrastructure/llm/: __init__.py  base_llm.py  openai_client.py  (+1 more)
src/recognizer/interfaces/: __init__.py
(+79 files in other folders)
